// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/etablissement /{identifier}/grants/v2 should return grants with siren 1`] = `
{
  "count": 2,
  "subventions": [
    {
      "application": {
        "anneeDemande": 2023,
        "anneesPluriannualite": [
          2022,
          2023,
          2024,
        ],
        "cofinancementsSollicites": false,
        "conditionsVersements": "PHASED",
        "dateConvention": "2023-03-14T00:00:00.000Z",
        "dateDecision": "2023-03-13T00:00:00.000Z",
        "dateDepotDemande": "2023-03-12T00:00:00.000Z",
        "dateMiseAJour": "2025-12-12T00:00:00.000Z",
        "datesPeriodeVersement": [
          "2023-03-15T00:00:00.000Z",
          "2023-03-16T00:00:00.000Z",
        ],
        "descriptionConditionsVersements": "conditions",
        "descriptionIdJointure": "pour joindre",
        "dispositif": "dispositif",
        "ej": "EJ0001",
        "exerciceBudgetaire": 2023,
        "fournisseur": "osiris",
        "idAttribuant": "123456789",
        "idAutoriteGestion": "012345678",
        "idCofinanceursSollicites": [],
        "idEtablissementBeneficiaire": "10000000000001",
        "idJointure": "joint001",
        "idRAE": "RAEid",
        "idServiceInstructeur": "890123456",
        "idSubvention": "osiris--subv001",
        "idSubventionProvider": "subv001",
        "idUnique": "osiris--subv001--2023",
        "idVersement": "1000000000019--subv001--2023",
        "montantAccorde": 15000,
        "montantDemande": 30000,
        "montantTotal": 50000,
        "nature": "Aide en nature",
        "nomAttribuant": "attribuant",
        "nomAutoriteGestion": "autoriteGestion",
        "nomServiceInstructeur": "serviceInstructeur",
        "nomsAttribuantsCofinanceurs": [],
        "notificationUE": false,
        "objet": "objet",
        "pluriannualite": true,
        "pourcentageSubvention": 100,
        "referenceDecision": "idDecision",
        "sousDispositif": "sous-dispositif",
        "statutLabel": "Accordé",
        "typeIdAttribuant": null,
        "typeIdAutoriteGestion": null,
        "typeIdCofinanceursSollicites": [],
        "typeIdEtablissementBeneficiaire": "siret",
        "typeIdServiceInstructeur": null,
      },
      "payments": [
        {
          "action": "Label d'action Exemple",
          "activite": "Label d'activité Exemple",
          "attachementComptable": "BRET",
          "codeAction": "0101-01-02",
          "codeActivite": "077601003222",
          "codeCentreFinancier": "AA01/0776-C001-4000",
          "dateMiseAJour": "2025-02-04T00:00:00.000Z",
          "dateOperation": "2023-07-12T00:00:00.000Z",
          "ej": "0001821732",
          "exerciceBudgetaire": 2023,
          "idEntrepriseBeneficiaire": "100000000",
          "idEtablissementBeneficiaire": "10000000000001",
          "idVersement": "1000000000019--subv001--2023",
          "libelleCentreFinancier": "UO DGER XXXX-C001",
          "ministere": "Ministère Exemple",
          "mission": "Mission Exemple",
          "montant": 89988.3,
          "numeroProgramme": 101,
          "programme": "Programme Exemple",
          "provider": "chorus",
          "regionAttachementComptable": "Bretagne",
          "sigleMinistere": "ME",
          "typeIdEntrepriseBeneficiaire": "siren",
          "typeIdEtablissementBeneficiaire": "siret",
          "uniqueId": "UNIQUE_ID",
        },
      ],
    },
    {
      "application": {
        "anneeDemande": 2023,
        "anneesPluriannualite": [
          2022,
          2023,
          2024,
        ],
        "cofinancementsSollicites": false,
        "conditionsVersements": "PHASED",
        "dateConvention": "2023-03-14T00:00:00.000Z",
        "dateDecision": "2023-03-13T00:00:00.000Z",
        "dateDepotDemande": "2023-03-12T00:00:00.000Z",
        "dateMiseAJour": "2025-12-12T00:00:00.000Z",
        "datesPeriodeVersement": [
          "2023-03-15T00:00:00.000Z",
          "2023-03-16T00:00:00.000Z",
        ],
        "descriptionConditionsVersements": "conditions",
        "descriptionIdJointure": "pour joindre",
        "dispositif": "dispositif",
        "ej": "N/A",
        "exerciceBudgetaire": 2023,
        "fournisseur": "fonjep",
        "idAttribuant": "123456789",
        "idAutoriteGestion": "012345678",
        "idCofinanceursSollicites": [],
        "idEtablissementBeneficiaire": "10000000000001",
        "idJointure": "joint001",
        "idRAE": "RAEid",
        "idServiceInstructeur": "890123456",
        "idSubvention": "fonjep--subv002",
        "idSubventionProvider": "subv002",
        "idUnique": "fonjep--subv002--2023",
        "idVersement": "S03351-2023-05-12-2023-10000000000001",
        "montantAccorde": 15000,
        "montantDemande": 30000,
        "montantTotal": 50000,
        "nature": "Aide en nature",
        "nomAttribuant": "attribuant",
        "nomAutoriteGestion": "autoriteGestion",
        "nomServiceInstructeur": "serviceInstructeur",
        "nomsAttribuantsCofinanceurs": [],
        "notificationUE": false,
        "objet": "objet",
        "pluriannualite": true,
        "pourcentageSubvention": 100,
        "referenceDecision": "idDecision",
        "sousDispositif": "sous-dispositif",
        "statutLabel": "Accordé",
        "typeIdAttribuant": null,
        "typeIdAutoriteGestion": null,
        "typeIdCofinanceursSollicites": [],
        "typeIdEtablissementBeneficiaire": "siret",
        "typeIdServiceInstructeur": null,
      },
      "payments": [
        {
          "action": "Développement de la vie associative",
          "activite": "Label d'activité Exemple",
          "attachementComptable": "N/A",
          "codeAction": null,
          "codeActivite": null,
          "codeCentreFinancier": "N/A",
          "dateMiseAJour": "2025-02-04T00:00:00.000Z",
          "dateOperation": "2023-07-12T00:00:00.000Z",
          "ej": "N/A",
          "exerciceBudgetaire": 2023,
          "idEntrepriseBeneficiaire": "100000000",
          "idEtablissementBeneficiaire": "10000000000001",
          "idVersement": "S03351-2023-05-12-2023-10000000000001",
          "libelleCentreFinancier": "N/A",
          "ministere": "Ministère Exemple",
          "mission": "Mission Exemple",
          "montant": 3752,
          "numeroProgramme": 163,
          "programme": "Programme Exemple",
          "provider": "fonjep",
          "regionAttachementComptable": "N/A",
          "sigleMinistere": "ME",
          "typeIdEntrepriseBeneficiaire": "siren",
          "typeIdEtablissementBeneficiaire": "siret",
          "uniqueId": "S03351-2023-05-12-2023-10000000000001-163-2023-07-12",
        },
        {
          "action": "Développement de la vie associative",
          "activite": "Label d'activité Exemple",
          "attachementComptable": "N/A",
          "codeAction": null,
          "codeActivite": null,
          "codeCentreFinancier": "N/A",
          "dateMiseAJour": "2025-02-04T00:00:00.000Z",
          "dateOperation": "2023-11-12T00:00:00.000Z",
          "ej": "N/A",
          "exerciceBudgetaire": 2023,
          "idEntrepriseBeneficiaire": "100000000",
          "idEtablissementBeneficiaire": "10000000000001",
          "idVersement": "S03351-2023-05-12-2023-10000000000001",
          "libelleCentreFinancier": "N/A",
          "ministere": "Ministère Exemple",
          "mission": "Mission Exemple",
          "montant": 3752,
          "numeroProgramme": 163,
          "programme": "Programme Exemple",
          "provider": "fonjep",
          "regionAttachementComptable": "N/A",
          "sigleMinistere": "ME",
          "typeIdEntrepriseBeneficiaire": "siren",
          "typeIdEtablissementBeneficiaire": "siret",
          "uniqueId": "S03351-2023-05-12-2023-10000000000001-163-2023-11-12",
        },
      ],
    },
  ],
}
`;

exports[`/etablissement /siret/grants returns grants 1`] = `
{
  "count": 2,
  "subventions": [
    {
      "application": {
        "actions_proposee": [
          {
            "intitule": {
              "last_update": "2025-12-12T00:00:00.000Z",
              "provider": "osiris",
              "type": "string",
              "value": "objet",
            },
          },
        ],
        "annee_demande": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "number",
          "value": 2023,
        },
        "co_financement": {
          "cofinanceur": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "string",
            "value": "",
          },
          "cofinanceur_email": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "string",
            "value": "",
          },
          "montants": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "number",
            "value": 0,
          },
        },
        "creer_le": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "object",
          "value": "2023-03-12T00:00:00.000Z",
        },
        "date_commision": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "object",
          "value": "2023-03-13T00:00:00.000Z",
        },
        "dispositif": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "dispositif",
        },
        "ej": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "EJ0001",
        },
        "financeur_principal": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "attribuant",
        },
        "montants": {
          "accorde": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "number",
            "value": 15000,
          },
          "demande": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "number",
            "value": 30000,
          },
          "total": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "number",
            "value": 50000,
          },
        },
        "pluriannualite": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "boolean",
          "value": true,
        },
        "service_instructeur": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "serviceInstructeur",
        },
        "siret": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "10000000000001",
        },
        "sous_dispositif": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "sous-dispositif",
        },
        "status": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "Accordé",
        },
        "statut_label": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "Accordé",
        },
        "transmis_le": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "object",
          "value": "2023-03-12T00:00:00.000Z",
        },
        "versementKey": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "1000000000019--subv001--2023",
        },
      },
      "payments": [
        {
          "activitee": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "Label d'activité Exemple",
          },
          "amount": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "number",
            "value": 89988.3,
          },
          "centreFinancier": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "UO DGER XXXX-C001",
          },
          "dateOperation": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "object",
            "value": "2023-07-12T00:00:00.000Z",
          },
          "domaineFonctionnel": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "Label d'action Exemple",
          },
          "ej": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "0001821732",
          },
          "exerciceBudgetaire": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "number",
            "value": 2023,
          },
          "libelleProgramme": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "Programme Exemple",
          },
          "programme": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "number",
            "value": 101,
          },
          "siret": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "10000000000001",
          },
          "versementKey": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "1000000000019--subv001--2023",
          },
        },
      ],
    },
    {
      "application": {
        "actions_proposee": [
          {
            "intitule": {
              "last_update": "2025-12-12T00:00:00.000Z",
              "provider": "fonjep",
              "type": "string",
              "value": "objet",
            },
          },
        ],
        "annee_demande": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "number",
          "value": 2023,
        },
        "co_financement": {
          "cofinanceur": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "",
          },
          "cofinanceur_email": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "",
          },
          "montants": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 0,
          },
        },
        "creer_le": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "object",
          "value": "2023-03-12T00:00:00.000Z",
        },
        "date_commision": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "object",
          "value": "2023-03-13T00:00:00.000Z",
        },
        "dispositif": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "dispositif",
        },
        "ej": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "N/A",
        },
        "financeur_principal": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "attribuant",
        },
        "montants": {
          "accorde": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 15000,
          },
          "demande": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 30000,
          },
          "total": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 50000,
          },
        },
        "pluriannualite": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "boolean",
          "value": true,
        },
        "service_instructeur": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "serviceInstructeur",
        },
        "siret": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "10000000000001",
        },
        "sous_dispositif": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "sous-dispositif",
        },
        "status": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "Accordé",
        },
        "statut_label": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "Accordé",
        },
        "transmis_le": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "object",
          "value": "2023-03-12T00:00:00.000Z",
        },
        "versementKey": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "S03351-2023-05-12-2023-10000000000001",
        },
      },
      "payments": [
        {
          "amount": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 3752,
          },
          "codePoste": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "S03351",
          },
          "dateOperation": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "object",
            "value": "2023-07-12T00:00:00.000Z",
          },
          "exerciceBudgetaire": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 2023,
          },
          "libelleProgramme": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "Programme Exemple",
          },
          "programme": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 163,
          },
          "siret": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "10000000000001",
          },
          "versementKey": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "S03351-2023-05-12-2023-10000000000001",
          },
        },
        {
          "amount": {
            "last_update": "2023-11-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 3752,
          },
          "codePoste": {
            "last_update": "2023-11-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "S03351",
          },
          "dateOperation": {
            "last_update": "2023-11-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "object",
            "value": "2023-11-12T00:00:00.000Z",
          },
          "exerciceBudgetaire": {
            "last_update": "2023-11-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 2023,
          },
          "libelleProgramme": {
            "last_update": "2023-11-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "Programme Exemple",
          },
          "programme": {
            "last_update": "2023-11-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 163,
          },
          "siret": {
            "last_update": "2023-11-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "10000000000001",
          },
          "versementKey": {
            "last_update": "2023-11-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "S03351-2023-05-12-2023-10000000000001",
          },
        },
      ],
    },
  ],
}
`;

exports[`/etablissement /siret/subventions returns subventions 1`] = `
{
  "subventions": [
    {
      "actions_proposee": [
        {
          "intitule": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "string",
            "value": "objet",
          },
        },
      ],
      "annee_demande": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "number",
        "value": 2023,
      },
      "co_financement": {
        "cofinanceur": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "",
        },
        "cofinanceur_email": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "",
        },
        "montants": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "number",
          "value": 0,
        },
      },
      "creer_le": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "object",
        "value": "2023-03-12T00:00:00.000Z",
      },
      "date_commision": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "object",
        "value": "2023-03-13T00:00:00.000Z",
      },
      "dispositif": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "dispositif",
      },
      "ej": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "EJ0001",
      },
      "financeur_principal": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "attribuant",
      },
      "montants": {
        "accorde": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "number",
          "value": 15000,
        },
        "demande": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "number",
          "value": 30000,
        },
        "total": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "number",
          "value": 50000,
        },
      },
      "pluriannualite": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "boolean",
        "value": true,
      },
      "service_instructeur": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "serviceInstructeur",
      },
      "siret": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "10000000000001",
      },
      "sous_dispositif": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "sous-dispositif",
      },
      "status": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "Accordé",
      },
      "statut_label": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "Accordé",
      },
      "transmis_le": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "object",
        "value": "2023-03-12T00:00:00.000Z",
      },
      "versementKey": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "1000000000019--subv001--2023",
      },
    },
    {
      "actions_proposee": [
        {
          "intitule": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "objet",
          },
        },
      ],
      "annee_demande": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "number",
        "value": 2023,
      },
      "co_financement": {
        "cofinanceur": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "",
        },
        "cofinanceur_email": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "",
        },
        "montants": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "number",
          "value": 0,
        },
      },
      "creer_le": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "object",
        "value": "2023-03-12T00:00:00.000Z",
      },
      "date_commision": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "object",
        "value": "2023-03-13T00:00:00.000Z",
      },
      "dispositif": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "dispositif",
      },
      "ej": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "N/A",
      },
      "financeur_principal": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "attribuant",
      },
      "montants": {
        "accorde": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "number",
          "value": 15000,
        },
        "demande": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "number",
          "value": 30000,
        },
        "total": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "number",
          "value": 50000,
        },
      },
      "pluriannualite": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "boolean",
        "value": true,
      },
      "service_instructeur": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "serviceInstructeur",
      },
      "siret": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "10000000000001",
      },
      "sous_dispositif": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "sous-dispositif",
      },
      "status": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "Accordé",
      },
      "statut_label": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "Accordé",
      },
      "transmis_le": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "object",
        "value": "2023-03-12T00:00:00.000Z",
      },
      "versementKey": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "S03351-2023-05-12-2023-10000000000001",
      },
    },
  ],
}
`;
